--- a/walletms-uk/slo.yaml
+++ b/walletms-uk/slo.yaml
@@ -5,108 +5,52 @@ comparison:
   include_result_with_score: "pass"
   aggregate_function: avg
 objectives:
-  - sli: GetWallet_percentile_90
-    displayName: "Get Wallet 90th Percentile"
-    pass:
-      - criteria:
-          - "<=90"
-    warning:
-      - criteria:
-          - "<=66"
-    weight: 0
-  - sli: GetWallet_requests
-    displayName: "Get Wallet requests"
-    pass:
-      - criteria:
-          - ">20"
-  - sli: GetWallet_failures
-    displayName: "Get Wallet failures"
-    pass:
-      - criteria:
-          - "<20"
-    weight: 2
-  - sli: GetWallet_rps
-    displayName: "Get Wallet throughput"
-    pass:
-      - criteria:
-          - ">2"
-    weight: 0
-  - sli: AddCard_percentile_90
-    displayName: "Add Card 90th Percentile"
-    pass:
-      - criteria:
-          - "<=1360"
-    warning:
-      - criteria:
-          - "<=1314"
-    weight: 0
-  - sli: AddCard_requests
-    displayName: "Add Card requests"
-    pass:
-      - criteria:
-          - ">20"
-  - sli: AddCard_failures
-    displayName: "Add Card failures"
-    pass:
-      - criteria:
-          - "<20"
-    weight: 2
-  - sli: AddCard_rps
-    displayName: "Add Card throughput"
-    pass:
-      - criteria:
-          - ">2"
-    weight: 0
-  - sli: UpdateCard_percentile_90
-    displayName: "Update Card 90th Percentile"
+  - sli: total_percentile_90
+    displayName: "90th Percentile"
     pass:
       - criteria:
           - "<=150"
     warning:
       - criteria:
-          - "<=115"
-  - sli: UpdateCard_requests
-    displayName: "Update Card requests"
+          - "<=100"
+  - sli: total_requests
+    displayName: "total requests"
     pass:
       - criteria:
           - ">20"
-  - sli: UpdateCard_failures
-    displayName: "Update Card failures"
+  - sli: total_failures
+    displayName: "total failures"
     pass:
       - criteria:
           - "<20"          
-  - sli: UpdateCard_rps
-    displayName: "Update Card throughput"
+  - sli: total_rps
+    displayName: "throughput"
     pass:
       - criteria:
-          - ">2"
-    weight: 0
-  - sli: DeleteCard_percentile_90
-    displayName: "Delete Card 90th Percentile"
+          - ">60"
+  - sli: get_percentile_90
+    displayName: "Get 90th Percentile"
     pass:
       - criteria:
-          - "<=1350"
+          - "<=150"
     warning:
       - criteria:
-          - "<=1314"
-    weight: 2
-  - sli: DeleteCard_requests
-    displayName: "Delete Card requests"
+          - "<=100"
+  - sli: get_requests
+    displayName: "Get requests"
     pass:
       - criteria:
           - ">20"
-  - sli: DeleteCard_failures
-    displayName: "Delete Card failures"
+  - sli: get_failures
+    displayName: "Get failures"
     pass:
       - criteria:
-          - "<20"
-    weight: 2
-  - sli: DeleteCard_rps
-    displayName: "Delete Card throughput"
+          - "<20"          
+  - sli: get_rps
+    displayName: "Get throughput"
     pass:
       - criteria:
-          - ">2"
-    weight: 0
+          - ">60"
 total_score:
   pass: "90%"
   warning: "75%"
