--- a/walletms-uk/prometheus/sli.yaml
+++ b/walletms-uk/prometheus/sli.yaml
@@ -5,19 +5,7 @@ indicators:
   total_requests: last_over_time(locust_total_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
   total_failures: last_over_time(locust_total_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
   total_rps: last_over_time(locust_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  GetWallet_percentile_90: last_over_time(locust_GetWallet_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  GetWallet_requests: last_over_time(locust_GetWallet_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  GetWallet_failures: last_over_time(locust_GetWallet_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
-  GetWallet_rps: last_over_time(locust_GetWallet_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  AddCard_percentile_90: last_over_time(locust_AddCard_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  AddCard_requests: last_over_time(locust_AddCard_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  AddCard_failures: last_over_time(locust_AddCard_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
-  AddCard_rps: last_over_time(locust_AddCard_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  UpdateCard_percentile_90: last_over_time(locust_UpdateCard_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  UpdateCard_requests: last_over_time(locust_UpdateCard_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  UpdateCard_failures: last_over_time(locust_UpdateCard_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
-  UpdateCard_rps: last_over_time(locust_UpdateCard_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  DeleteCard_percentile_90: last_over_time(locust_DeleteCard_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  DeleteCard_requests: last_over_time(locust_DeleteCard_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  DeleteCard_failures: last_over_time(locust_DeleteCard_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
-  DeleteCard_rps: last_over_time(locust_DeleteCard_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  get_percentile_90: last_over_time(locust_get_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  get_requests: last_over_time(locust_get_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  get_failures: last_over_time(locust_get_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
+  get_rps: last_over_time(locust_get_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
