--- a/testname1/slo.yaml
+++ b/testname1/slo.yaml
@@ -5,98 +5,29 @@ comparison:
   include_result_with_score: "pass"
   aggregate_function: avg
 objectives:
-  - sli: GetWallet_percentile_90
-    displayName: "Get Wallet 90th Percentile"
+  - sli: get_percentile_90
+    displayName: "Get 90th Percentile"
     pass:
       - criteria:
-          - "<=200"
+          - "<=150"
     warning:
       - criteria:
-          - "<=180"
-  - sli: GetWallet_requests
-    displayName: "Get Wallet requests"
+          - "<=100"
+  - sli: get_requests
+    displayName: "Get requests"
     pass:
       - criteria:
-          - ">5"
-  - sli: GetWallet_failures
-    displayName: "Get Wallet failures"
-    pass:
-      - criteria:
-          - "<20"
-  - sli: GetWallet_rps
-    displayName: "Get Wallet throughput"
-    pass:
-      - criteria:
-          - ">1"
-  - sli: AddCard_percentile_90
-    displayName: "Add Card 90th Percentile"
-    pass:
-      - criteria:
-          - "<=2500"
-    warning:
-      - criteria:
-          - "<=2000"
-  - sli: AddCard_requests
-    displayName: "Add Card requests"
-    pass:
-      - criteria:
-          - ">5"
-  - sli: AddCard_failures
-    displayName: "Add Card failures"
-    pass:
-      - criteria:
-          - "<20"
-  - sli: AddCard_rps
-    displayName: "Add Card throughput"
-    pass:
-      - criteria:
-          - ">1"
-  - sli: UpdateCard_percentile_90
-    displayName: "Update Card 90th Percentile"
-    pass:
-      - criteria:
-          - "<=2500"
-    warning:
-      - criteria:
-          - "<=2000"
-  - sli: UpdateCard_requests
-    displayName: "Update Card requests"
-    pass:
-      - criteria:
-          - ">2"
-  - sli: UpdateCard_failures
-    displayName: "Update Card failures"
+          - ">20"
+  - sli: get_failures
+    displayName: "Get failures"
     pass:
       - criteria:
           - "<20"          
-  - sli: UpdateCard_rps
-    displayName: "Update Card throughput"
-    pass:
-      - criteria:
-          - ">1"
-  - sli: DeleteCard_percentile_90
-    displayName: "Delete Card 90th Percentile"
-    pass:
-      - criteria:
-          - "<=2500"
-    warning:
-      - criteria:
-          - "<=2000"
-  - sli: DeleteCard_requests
-    displayName: "Delete Card requests"
+  - sli: get_rps
+    displayName: "Get throughput"
     pass:
       - criteria:
           - ">5"
-  - sli: DeleteCard_failures
-    displayName: "Delete Card failures"
-    pass:
-      - criteria:
-          - "<20"
-  - sli: DeleteCard_rps
-    displayName: "Delete Card throughput"
-    pass:
-      - criteria:
-          - ">1"
 total_score:
   pass: "90%"
   warning: "75%"
