--- a/testname1/slo.yaml
+++ b/testname1/slo.yaml
@@ -5,121 +5,98 @@ comparison:
   include_result_with_score: "pass"
   aggregate_function: avg
 objectives:
-  - sli: Paypal_GetWallet_percentile_90
-    displayName: "Paypal Get Wallet 90th Percentile"
+  - sli: GetWallet_percentile_90
+    displayName: "Get Wallet 90th Percentile"
     pass:
       - criteria:
-          - "<=100"
+          - "<=200"
     warning:
       - criteria:
-          - "<=66"
-  - sli: Paypal_GetWallet_requests
-    displayName: "Paypal Get Wallet requests"
+          - "<=180"
+  - sli: GetWallet_requests
+    displayName: "Get Wallet requests"
     pass:
       - criteria:
-          - ">20"
-  - sli: Paypal_GetWallet_failures
-    displayName: "Paypal Get Wallet failures"
+          - ">5"
+  - sli: GetWallet_failures
+    displayName: "Get Wallet failures"
+    pass:
+      - criteria:
+          - "<20"
+  - sli: GetWallet_rps
+    displayName: "Get Wallet throughput"
+    pass:
+      - criteria:
+          - ">1"
+  - sli: AddCard_percentile_90
+    displayName: "Add Card 90th Percentile"
+    pass:
+      - criteria:
+          - "<=2500"
+    warning:
+      - criteria:
+          - "<=2000"
+  - sli: AddCard_requests
+    displayName: "Add Card requests"
+    pass:
+      - criteria:
+          - ">5"
+  - sli: AddCard_failures
+    displayName: "Add Card failures"
+    pass:
+      - criteria:
+          - "<20"
+  - sli: AddCard_rps
+    displayName: "Add Card throughput"
+    pass:
+      - criteria:
+          - ">1"
+  - sli: UpdateCard_percentile_90
+    displayName: "Update Card 90th Percentile"
+    pass:
+      - criteria:
+          - "<=2500"
+    warning:
+      - criteria:
+          - "<=2000"
+  - sli: UpdateCard_requests
+    displayName: "Update Card requests"
+    pass:
+      - criteria:
+          - ">2"
+  - sli: UpdateCard_failures
+    displayName: "Update Card failures"
     pass:
       - criteria:
           - "<20"          
-  - sli: Paypal_GetWallet_rps
-    displayName: "Paypal Get Wallet throughput"
+  - sli: UpdateCard_rps
+    displayName: "Update Card throughput"
     pass:
       - criteria:
-          - ">2"
-  - sli: Paypal_AddCard_percentile_90
-    displayName: "Paypal Add Card 90th Percentile"
+          - ">1"
+  - sli: DeleteCard_percentile_90
+    displayName: "Delete Card 90th Percentile"
     pass:
       - criteria:
-          - "<=1360"
+          - "<=2500"
     warning:
       - criteria:
-          - "<=1314"
-  - sli: Paypal_AddCard_requests
-    displayName: "Paypal Add Card requests"
+          - "<=2000"
+  - sli: DeleteCard_requests
+    displayName: "Delete Card requests"
     pass:
       - criteria:
-          - ">20"
-  - sli: Paypal_AddCard_failures
-    displayName: "Paypal Add Card failures"
+          - ">5"
+  - sli: DeleteCard_failures
+    displayName: "Delete Card failures"
     pass:
       - criteria:
-          - "<20"          
-  - sli: Paypal_AddCard_rps
-    displayName: "Paypal Add Card throughput"
+          - "<20"
+  - sli: DeleteCard_rps
+    displayName: "Delete Card throughput"
     pass:
       - criteria:
-          - ">2"
-  - sli: Paypal_DeleteCard_percentile_90
-    displayName: "Paypal Delete Card 90th Percentile"
-    pass:
-      - criteria:
-          - "<=1350"
-    warning:
-      - criteria:
-          - "<=1314"
-  - sli: Paypal_DeleteCard_requests
-    displayName: "Paypal Delete Card requests"
-    pass:
-      - criteria:
-          - ">20"
-  - sli: Paypal_DeleteCard_failures
-    displayName: "Paypal Delete Card failures"
-    pass:
-      - criteria:
-          - "<1500"          
-  - sli: Paypal_DeleteCard_rps
-    displayName: "Paypal Delete Card throughput"
-    pass:
-      - criteria:
-          - ">2"
-  - sli: Paypal_CheckoutV1_percentile_90
-    displayName: "Paypal Checkout V1 90th Percentile"
-    pass:
-      - criteria:
-          - "<=1350"
-    warning:
-      - criteria:
-          - "<=1314"
-  - sli: Paypal_CheckoutV1_requests
-    displayName: "Paypal Checkout V1 requests"
-    pass:
-      - criteria:
-          - ">20"
-  - sli: Paypal_CheckoutV1_failures
-    displayName: "Paypal Checkout V1 failures"
-    pass:
-      - criteria:
-          - "<100"          
-  - sli: Paypal_CheckoutV1_rps
-    displayName: "Paypal Checkout V1 throughput"
-    pass:
-      - criteria:
-          - ">2"
-  - sli: Paypal_CheckoutV2_percentile_90
-    displayName: "Paypal Checkout V2 90th Percentile"
-    pass:
-      - criteria:
-          - "<=5500"
-    warning:
-      - criteria:
-          - "<=5100"
-  - sli: Paypal_CheckoutV2_requests
-    displayName: "Paypal Checkout V2 requests"
-    pass:
-      - criteria:
-          - ">20"
-  - sli: Paypal_CheckoutV2_failures
-    displayName: "Paypal Checkout V2 failures"
-    pass:
-      - criteria:
-          - "<400"          
-  - sli: Paypal_CheckoutV2_rps
-    displayName: "Paypal Checkout V2 throughput"
-    pass:
-      - criteria:
-          - ">2"
+          - ">1"
 total_score:
   pass: "90%"
   warning: "75%"
