--- a/testname1/prometheus/sli.yaml
+++ b/testname1/prometheus/sli.yaml
@@ -5,23 +5,19 @@ indicators:
   total_requests: last_over_time(locust_total_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
   total_failures: last_over_time(locust_total_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
   total_rps: last_over_time(locust_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_GetWallet_percentile_90: last_over_time(locust_Paypal_GetWallet_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_GetWallet_requests: last_over_time(locust_Paypal_GetWallet_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_GetWallet_failures: last_over_time(locust_Paypal_GetWallet_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
-  Paypal_GetWallet_rps: last_over_time(locust_Paypal_GetWallet_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_AddCard_percentile_90: last_over_time(locust_Paypal_AddCard_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_AddCard_requests: last_over_time(locust_Paypal_AddCard_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_AddCard_failures: last_over_time(locust_Paypal_AddCard_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
-  Paypal_AddCard_rps: last_over_time(locust_Paypal_AddCard_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_DeleteCard_percentile_90: last_over_time(locust_Paypal_DeleteCard_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_DeleteCard_requests: last_over_time(locust_Paypal_DeleteCard_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_DeleteCard_failures: last_over_time(locust_Paypal_DeleteCard_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
-  Paypal_DeleteCard_rps: last_over_time(locust_Paypal_DeleteCard_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_CheckoutV1_percentile_90: last_over_time(locust_Paypal_CheckoutV1_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_CheckoutV1_requests: last_over_time(locust_Paypal_CheckoutV1_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_CheckoutV1_failures: last_over_time(locust_Paypal_CheckoutV1_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
-  Paypal_CheckoutV1_rps: last_over_time(locust_Paypal_CheckoutV1_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_CheckoutV2_percentile_90: last_over_time(locust_Paypal_CheckoutV2_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_CheckoutV2_requests: last_over_time(locust_Paypal_CheckoutV2_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
-  Paypal_CheckoutV2_failures: last_over_time(locust_Paypal_CheckoutV2_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
-  Paypal_CheckoutV2_rps: last_over_time(locust_Paypal_CheckoutV2_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  GetWallet_percentile_90: last_over_time(locust_GetWallet_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  GetWallet_requests: last_over_time(locust_GetWallet_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  GetWallet_failures: last_over_time(locust_GetWallet_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
+  GetWallet_rps: last_over_time(locust_GetWallet_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  AddCard_percentile_90: last_over_time(locust_AddCard_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  AddCard_requests: last_over_time(locust_AddCard_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  AddCard_failures: last_over_time(locust_AddCard_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
+  AddCard_rps: last_over_time(locust_AddCard_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  UpdateCard_percentile_90: last_over_time(locust_UpdateCard_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  UpdateCard_requests: last_over_time(locust_UpdateCard_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  UpdateCard_failures: last_over_time(locust_UpdateCard_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
+  UpdateCard_rps: last_over_time(locust_UpdateCard_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  DeleteCard_percentile_90: last_over_time(locust_DeleteCard_90th_percentile{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  DeleteCard_requests: last_over_time(locust_DeleteCard_requests{job="$SERVICE-$PROJECT-$STAGE"}[30m])
+  DeleteCard_failures: last_over_time(locust_DeleteCard_failures{job="$SERVICE-$PROJECT-$STAGE"}[30m])  
+  DeleteCard_rps: last_over_time(locust_DeleteCard_requests_per_second{job="$SERVICE-$PROJECT-$STAGE"}[30m])
